# clean-code-in-django

./: .env.dist  .gitignore  Makefile  README.md  pyproject.toml
docs/development/: tools.md
src/: pytest.ini
src/api/rest/: openapi.py
src/api/rest/v1/: room.py  urls.py
src/api/rest/v1/room/: room.py  urls.py
src/apps/core/: utils.py
src/apps/handlers/: room_handler.py
src/apps/repository/database/: apps.py  models.py
src/apps/repository/database/room/: models.py
src/apps/repository/database/user/: models.py
src/apps/serializers/: room_serializer.py
src/apps/services/: room_service.py
src/config/: README.md  settings.py  urls.py
src/config/settings/: __init__.py  base.py  configuration.py
src/core/: mixins.py  responses.py
src/handlers/: room_handler.py
src/repository/database/: admin.py  apps.py  models.py
src/repository/database/migrations/: 0001_initial.py  0002_user.py  0002_user_squashed_0003_user_is_staff.py
src/repository/database/room/: models.py
src/repository/database/user/: manager.py  models.py
src/serializers/: room_serializer.py
src/services/: room_service.py
src/templates/base/: index.html
src/templates/pages/: room.html
src/tests/: README.md  conftest.py  factories.py  test_sample.py  test_user_factory.py
src/tests/integration/: test_integration_sample.py  test_room.py
src/tests/unit/core/: test_core_responses.py  test_core_utils.py
src/views/: urls.py
src/views/index/: views.py
