[tool.poetry]
name = "django-clean-code"
version = "0.1.0"
description = ""
authors = ["Azhar Iqbal <azhariqbal2942@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2"
djangorestframework = "^3.14.0"
django-filter = "^23.3"
drf-spectacular = "^0.26.5"
django-redis = "^5.4.0"
django-cachalot = "^2.6.1"
environs = "^9.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-django = "^4.5.2"
pytest-factoryboy = "^2.6.0"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
